--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "Search Plugin for CakePHP 3.10",
 	"type": "cakephp-plugin",
 	"keywords": ["cakephp", "search", "prg", "post-redirect-get", "filter"],
-	"homepage": "http://github.com/CakeDC/search",
+	"homepage": "http://github.com/QueenCityCodeFactory/search",
 	"license": "MIT",
 	"authors": [
 		{
@@ -14,11 +14,11 @@
 	],
 	"support": {
 		"email": "team@cakedc.com",
-		"issues": "https://github.com/CakeDC/search/issues",
+		"issues": "https://github.com/QueenCityCodeFactory/search/issues",
 		"forum": "http://stackoverflow.com/tags/cakedc",
 		"wiki": "https://github.com/CakeDC/search/blob/master/Docs/Home.md",
 		"irc": "irc://irc.freenode.org/cakephp",
-		"source": "https://github.com/CakeDC/search"
+		"source": "https://github.com/QueenCityCodeFactory/search"
 	},
 	"require": {
 		"php": ">=7.2.0",
@@ -34,5 +34,6 @@
 			"Search\\Test\\": "tests"
 		}
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "stable",
+	"prefer-stable": true
 }
